--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ footer{
        <div class="conteudo-card">
                 <div class="img-card">
                     <b href="#">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/CaR0VZlV3Ww?si=AmDpoBGR3Q5S1VB_" title="YouTube video player" text-align="center"
+                        <iframe src="https://www.youtube.com/embed/CaR0VZlV3Ww?si=AmDpoBGR3Q5S1VB_" title="YouTube video player" text-align="center"
                         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
                         web-share" allowfullscreen></iframe>
                         
